Server/server-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: rest-app
spec:
  selector:
    matchLabels:
      app: rest-app
  replicas: 1
  template:
    metadata:
      labels:
        app: rest-app
    spec:
      containers:
      - name: master
        imagePullPolicy: Always
        image: jarvisgaurav98/oms-server:latest
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
        ports:
        - containerPort: 4000
