Server/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-svc
  labels:
    app: rest-svc
spec:
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: rest-app
